# codex-radar

./: .gitignore  AGENTS.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: test.yml
distribution/: helper-compatibility.json
docs/: REQUIREMENTS.md  ROADMAP.md  SPEC.md  TASKS.md
docs/proposals/: mobile-ssh-read-protocol-stage0.md
docs/releases/: 0.4.0.md  0.4.11.md  0.4.12.md  0.4.19.md  0.4.3.md  0.4.4.md
docs/runbooks/: install-hooks.md
docs/schemas/: display-state-v1.schema.json  session-cache-v1.schema.json  transcript-preview-v1.schema.json  transcript-preview-v2.schema.json
examples/: hooks.json  sessions.json
extensions/vscode/: CHANGELOG.md  README.md  package.json
extensions/vscode/media/: dashboard.css  dashboard.js  preview.js
extensions/vscode/src/: codexAppServerController.js  codexCliTerminal.js  codexLink.js  codexThreadCatalog.js  codexThreadState.js  dashboardViewModel.js  exportSource.js  extension.js  radarCli.js  (+7 more)
scripts/: build-helper-bundle.py  read-protocol-stage0.py  smoke-read-protocol-stage0.py
src/codex_radar/: __init__.py  cli.py  completion.py  display_state.py  export_adapter.py  helper_manager.py  hook.py  platform_paths.py  project_classification.py  reconcile.py  store.py  thread_rpc.py  transcript.py  transcript_preview.py  tui.py  usage.py  watch.py
tests/: test_cli.py  test_display_contract_schemas.py  test_display_state.py  test_examples.py  test_export_cli.py  test_helper_manager.py  test_hook.py  test_read_protocol_stage0.py  test_reconcile.py  test_schema.py  test_store.py  test_thread_rpc.py  test_transcript.py  test_transcript_preview_contract.py  test_tui.py  test_usage.py  test_watch.py
tests/fixtures/: display-state-v1.json  read-protocol-stage0-v1.json  transcript-preview-v1.json  transcript-preview-v2.json
(+20 files in other folders)
