[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-radar"
version = "0.1.0"
description = "Track Codex conversations across projects with hooks and a fast terminal UI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "plaonn" }]
keywords = ["codex", "tui", "hooks", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development",
  "Topic :: Terminals",
]
dependencies = []

[project.scripts]
codex-radar = "codex_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
