[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-radar"
version = "0.4.8"
description = "Track and resume host-local Codex threads across projects."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "plaonn" }]
keywords = ["codex", "tui", "hooks", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development",
  "Topic :: Terminals",
]
dependencies = []

[project.scripts]
codex-radar = "codex_radar.cli:main"
codex-radar-hook = "codex_radar.hook:main"
codex-radar-helper = "codex_radar.helper_manager:main"

[tool.setuptools.packages.find]
where = ["src"]
